# mental-health-chatbot-mvp

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  Dockerfile
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/ml/: intents.json  resources.json
backend/app/routes/: __init__.py  assessment.py  auth.py  chat.py  mood.py
backend/app/services/: __init__.py  chatbot.py  crisis.py  embeddings.py  intent.py  llm.py  resource_matcher.py  sentiment.py
backend/app/utils/: init_db.py  security.py
planning/: mvp_1week_plan.md  mvp_executive_summary.md  quick_start_templates.md
