[project]
name = "mental-health-chatbot-mvp"
version = "0.1.0"
description = "Mental health chatbot MVP providing AI-powered mental health support"
authors = [
    {name = "Vishal Ashok Hegde",email = "vishalashok_hegde@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.30.0,<1.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
